# cassandra-cinema-system

./: .gitignore  README.md  cluster.py  docker-compose.yaml  package-lock.json  pyproject.toml  report.md  requirements.txt  server.py  setup.py
src/app/: client.py  server.py  setup.py
src/tests/: stress_test_1.js  stress_test_2.js  stress_test_3.js  stress_tests.py
